src/styles/lx-buttons.css
/* ... */
.lx-layout-default .lx-nav-panel ul li .lx-button-content-wrapper:not(.lx-dropdown-panel .lx-button-content-wrapper) {
  grid-template-areas: var(--button-nav-grid-areas);
  grid-template-columns: var(--button-nav-grid-template-columns);
  grid-template-rows: var(--button-nav-grid-template-rows);
  align-items: var(--button-nav-align);
  gap: var(--button-nav-gap);
}

.lx-layout-default .lx-nav-panel ul li .lx-button-content {
  text-align: var(--button-nav-text-align);
}

.lx-layout-default .lx-nav-panel ul li.lx-selected .lx-button {
  color: var(--color-button-nav-selected);
  background-color: var(--color-button-nav-selected-background);
  border-color: var(--color-button-nav-selected-border);
  border-left-color: var(--color-button-nav-selected-left-border);
  border-collapse: collapse;
}

.lx-layout-default .lx-nav-panel ul li .lx-button:hover {
  background-color: var(--color-button-nav-hover-background);
  border-color: var(--color-button-nav-hover-border);
  color: var(--color-button-nav-hover);
}

.lx-layout-default .lx-nav-panel ul li.lx-selected .lx-nested-nav .lx-button,
.lx-layout-default .lx-nav-panel ul li.lx-selected .lx-button-icon-only {
  border-left-color: transparent;
}

.lx-layout-default .lx-nav-panel ul .lx-dropdown-toggler .lx-button {
  --color-button-ghost: var(--color-button-nav);
  --color-button-ghost-icon-focus: var(--color-button-nav-icon);
}

/* Unselected nested nav btn + opened LxDDM toggler btn */
.lx-layout-default .lx-nav-panel .lx-nested-nav li:not(.lx-selected) .lx-button {
  --color-button-nav: var(--color-data);
  --color-button-nav-icon: var(--color-data);
  --color-button-nav-background: var(--color-region-2);
  --color-button-nav-selected: var(--color-data);
  --color-button-nav-icon-selected: var(--color-data);
  --color-button-nav-selected-background: var(--color-region-2);
}

/* Unselected nested nav btn + opened LxDDM toggler btn */
.lx-layout-default .lx-nav-panel .lx-nested-nav-open .lx-button-icon-only {
  --color-button-nav: var(--color-data);
  --color-button-nav-icon: var(--color-data);
  --color-button-nav-background: var(--color-region-2);
}

/* Closed LxDDM toggler btn, whose child is selected */
.lx-layout-default .lx-nav-panel ul li .lx-button.lx-child-selected {
  --color-button-nav-background: var(--color-highlight);
  --color-button-nav-icon: var(--color-button-nav-icon-selected);
}

.lx-layout-default .lx-nav-panel ul li .lx-nested-nav {
  list-style: none;
  padding: 0;
  --button-nav-gap: 0;
  --button-nav-padding: 0 calc(1.55rem + var(--button-nav-icon-width));
}

.lx-layout-default .lx-nested-nav {
  max-height: 0;
  overflow: hidden;
  opacity: 0;
}

.lx-layout-default .lx-nested-nav-open > .lx-nested-nav {
  max-height: calc(var(--lx-nested-item-count, 0) * var(--button-nav-height));
  opacity: 1;
}

/* Public + latvijalv nav styles */

.lx-layout-public .lx-nav-panel ul li .lx-nav-item-wrapper > .lx-button,
.lx-layout-public .lx-nav-panel ul .lx-toolbar > .lx-button,
.lx-layout-latvijalv .lx-nav-panel ul li .lx-nav-item-wrapper >.lx-button,
.lx-layout-latvijalv .lx-nav-panel ul .lx-toolbar > .lx-button,
.lx-layout-public .lx-nav-panel ul li .lx-nav-item-wrapper > .lx-context-container .lx-dropdown-toggler .lx-button,
.lx-layout-public .lx-nav-panel ul li > .lx-context-container .lx-dropdown-toggler .lx-button,
.lx-layout.lx-layout-public > nav > .lx-button.scroll-up-button,
.lx-layout-public .lx-nav-panel ul .lx-spotlight-button .lx-button,
.lx-layout-latvijalv .lx-nav-panel ul .lx-spotlight-button .lx-button {
  flex-direction: row;
  justify-content: center;
  padding: var(--button-nav-public-padding);
  margin: var(--button-nav-public-margin);
  text-decoration: var(--button-nav-public-text-decoration);
  height: var(--button-nav-public-height);
  min-width: var(--button-nav-public-min-width);
  width: var(--button-nav-public-width);
  font-size: var(--button-nav-public-font-size);
  font-weight: var(--button-nav-public-font-weight);
  border: var(--button-nav-public-border);
  border-radius: var(--button-nav-public-border-radius);
  background-color: var(--color-button-nav-public-background);
  color: var(--color-button-nav-public);
  outline-offset: var(--button-nav-public-outline-offset);
}

.lx-layout-public .lx-nav-panel ul li .lx-nav-item-wrapper > .lx-button .lx-button-content-wrapper,
.lx-layout-public .lx-nav-panel ul .lx-toolbar > .lx-button .lx-button-content-wrapper,
.lx-layout-latvijalv .lx-nav-panel ul li .lx-nav-item-wrapper > .lx-button .lx-button-content-wrapper,
.lx-layout-latvijalv .lx-nav-panel ul .lx-toolbar > .lx-button .lx-button-content-wrapper,
.lx-layout-public .lx-nav-panel ul .lx-spotlight-button .lx-button .lx-button-content-wrapper,
.lx-layout-latvijalv .lx-nav-panel ul .lx-spotlight-button .lx-button .lx-button-content-wrapper {
  grid-template-areas: var(--button-nav-public-grid-areas);
  grid-template-columns: var(--button-nav-public-grid-template-columns);
  grid-template-rows: var(--button-nav-public-grid-template-rows);
  align-items: var(--button-nav-public-align);
  gap: var(--button-nav-public-gap);
}

.lx-layout-public .lx-nav-panel ul li:first-of-type .lx-nav-item-wrapper > .lx-button .lx-button-content-wrapper,
.lx-layout-latvijalv .lx-nav-panel ul li:first-of-type .lx-nav-item-wrapper > .lx-button .lx-button-content-wrapper {
  --button-nav-public-grid-areas: 'icon';
  --button-nav-public-grid-template-columns: 1fr;
}
/* ... */

